# cuda-of-life

./: CMakeLists.txt  readme.md
src/: cuda-of-life.cpp  cuda-of-life.hpp  engine.cpp  engine.hpp  law.h  main.cpp  main.cu  u.cpp  u.hpp
